# calculator

./: CMakeLists.txt  calculator.cpp  main.cpp
commands/: backspacebutton.cpp  backspacebutton.h  clearbutton.cpp  clearbutton.h  command.h  commandhandeling.cpp  commandhandeling.h  digitshandling.cpp  digitshandling.h  equalbutton.cpp  equalbutton.h  functionshandeling.cpp  functionshandeling.h
main/: main.cpp
source/: calculator.cpp  calculator.h  calculator.ui
src/: calculator.cpp  calculator.h
ui/: calculator.ui
